<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">odoTRACKER</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_distance">Distance</string>
    <string name="button_distance_distance">Distance</string>
    <string name="button_distance_odometer">Odometer</string>
    <string name="start_odometer_reading">Start Odometer Reading</string>
    <string name="end_odometer_reading">End Odometer Reading</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="text_date">Date</string>
    <string name="text_notes">Notes</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="start_file">Start</string>
    <string name="end_file">End</string>
    <string name="distance_file">Distance</string>
    <string name="csv_history_file">OdoTrackerHistory.csv</string>
    <string name="start_odometer_reading_date">Start Odometer Reading Date</string>
    <string name="end_odometer_reading_date">End Odometer Reading Date</string>
    <string name="button_send">Send</string>
    <string name="toast_saved">Saved</string>
    <string name="language">Language</string>
    <string name="distance_unit">Distance Unit</string>
    
    
    
	<string-array name="languages">
	    <item>English</item>
		<item>Vietnamese</item>
	</string-array>
	
	<string-array name="distance_units">
	    <item>Kilometers</item>
		<item>Miles</item>
	</string-array>
	
</resources>
